--- a/datable.html
+++ b/datable.html
@@ -11,13 +11,16 @@
     <script src="./js/remodal.min.js"></script>
     <!--Remodal-->
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <!--<script src="./js/jquery-1.11.1.min.js"></script>-->
-    <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>-->
+    <!-- d3 -->
     <script src="./js/d3.3.5.5.min.js"></script>
 
+    <!-- Keshif -->
     <script type="text/javascript" src="js/keshif.js" charset="utf-8"></script>
     <link rel="stylesheet" href="css/keshif.css" type="text/css">
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" type="text/css">-->
+
+    <!-- Keshif Help -->
+    <script type="text/javascript" src="./helpin/helpin.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="./helpin/helpin.css" type="text/css">
 
     <!--Remodal-->
     <link rel="stylesheet" href="./css/checkout.css">
@@ -29,8 +32,6 @@
     <!--Custom Keshif-->
     <!--Joyride Guide-->
     <link rel="stylesheet" href="./css/joyride-2.1.css">
-    <!--<link rel="stylesheet" href="demo-style.css">-->
-    <!--<link rel="stylesheet" href="mobile.css">-->
     <!--Joyride Guide-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
@@ -50,18 +51,19 @@
         </div>
 
         <div class="three columns">
-          <h3 title="Feedback welcome via Helprace on the LHS" style="margin: 0;text-align: right;font-family:AgencyFB">BETA</h3>
+          <h3 title="Feedback welcome via Helprace on the LHS" 
+            id="so-awesome"
+            style="margin: 0;text-align: right; font-family: AgencyFB;"> BETA</h3>
         </div>
       </div>
       <div class="row" style="margin-bottom: 15px;">
         <div class="nine columns">
           <div>
             <!--<a href="#modal">Modal №1</a>-->
-            <a class="button button-primary" href="#modal">
-              Introduce us Please  <i class="fa fa-hand-spock-o" style="font-size:18px" aria-hidden="true"></i>
-              <!--<i class='fa fa-arrow-right'></i>-->
-              <!--<i class='fa fa-arrow-right'></i>-->
-            </a>
+            <a class="button button-primary" href="#modal" id="HelpWithCheckout">
+              Introduce us Please 
+              <i class="fa fa-hand-spock-o" style="font-size:18px" aria-hidden="true"></i>
+              </a>
             <div id="SelectedContainer"></div>
             <!--<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">-->
               <!--&lt;!&ndash; Identify your business so that you can collect the payments. &ndash;&gt;-->
@@ -81,8 +83,7 @@
           </div>
         </div>
         <div class="three columns">
-          <a class="button" style="margin: 0;position: absolute;right:0px" target="_blank" href="https://youtu.be/3Hmvms-1grU">Tutorial</a>
-          <!-- <a class="button" target="_blank" href="https://docs.google.com/spreadsheets/d/1hSAnjE6eRH-fvL4A6s1CSurIP-e2wcwLDF14AFvAeu0/edit#gid=864063755">See The Raw List</a> -->
+          <a class="button" style="margin: 0;position: absolute;right:0px" target="_blank" href="https://youtu.be/3Hmvms-1grU" id="HelpWithVideoTutorial">Tutorial</a>
         </div>
       </div>
       <div class="row">
@@ -240,50 +241,47 @@
 
     </script>
 
-     Joyride overlay guide
-    <script>
-      $(document).ready( function(){
-
-        observer.observe(document.body, {
-            childList: true
-          , subtree: true
-          , attributes: false
-          , characterData: false
-        })
-      })
-    </script>
-
-     Tip Content
     <ol id="joyRideTipContent">
-      <li data-class="so-awesome" data-text="Next" class="custom">
-        <h2>Stop #1</h2>
-        <p>You can control all the details for you tour stop. Any valid HTML will work inside of Joyride.</p>
+      <!-- Feedback TODO: Maybe later
+      <li data-id="so-awesome" data-text="Next" class="custom">
+        <h3>Stop #1</h3>
+        <p>This thing is beta. Like, it's been through alpha.</p>
+      </li>-->
+
+      <!-- 2) Experience Level - Filter -->
+      <li data-id="HelpWithFiltering" data-button="Next" data-options="tipLocation:bottom;tipAnimation:fade">
+        <h3>Find candidates by filtering</h3>
+        <p>You can use any of the groups on the left side.
+          Just click on a candidate characteristic to focus on candidates that match your need. </p>
       </li>
-      <li data-id="numero2" data-button="Next" data-options="tipLocation:top;tipAnimation:fade">
-        <h2>Stop #2</h2>
-        <p>Get the details right by styling Joyride with a custom stylesheet!</p>
+
+      <!-- 3) Introduce button (per candidate) -->
+      <li data-id="HelpWithAddIntro" data-button="Next" data-options="tipLocation:top;tipAnimation:fade">
+        <h3>Select the candidates you want to be introduced.</h3>
+        <p>The candidates you selected will be added to the top panel. They are listed by an identifier,
+          you'll get their information on checkout.</p>
       </li>
-      <li data-id="numero3" data-button="Next" data-options="tipLocation:right">
-        <h2>Stop #3</h2>
-        <p>It works right aligned.</p>
+      
+      <!-- 4) Introduce us - Checkout -->
+      <li data-id="HelpWithCheckout" data-button="Next" data-options="tipLocation:bottom;tipAnimation:fade">
+        <h3>Click here to be introduced</h3>
+        <p>Yada nada yada.</p>
       </li>
-      <li data-button="Next">
-        <h2>Stop #4</h2>
-        <p>It works as a modal too!</p>
+
+      <!-- 5) Keshif help -->
+      <li data-id="HelpWithKeshif" data-button="Next" data-options="tipLocation:bottom;tipAnimation:fade">
+        <h3>Click here to get more info about this data browser.</h3>
+        <p>Built with www.Keshif.me</p>
       </li>
-      <li data-class="someclass" data-button="Next" data-options="tipLocation:right">
-        <h2>Stop #4.5</h2>
-        <p>It works with classes, and only on the first visible element with that class.</p>
+
+      <!-- 6) Video tutorial -->
+      <li data-id="HelpWithVideoTutorial" data-button="Next" data-options="tipLocation:bottom;tipAnimation:fade">
+        <h3>Video Tutorial</h3>
+        <p>Be the master</p>
       </li>
-      <li data-id="numero5" data-button="Close">
-        <h2>Stop #5</h2>
-        <p>Now what are you waiting for? Add this to your projects and get the most out of your apps!</p>
-      </li>
+
     </ol>
 
-    <!--&lt;!&ndash; Run the plugin &ndash;&gt;-->
-    <script type="application/javascript" src="./js/custom-joyride.js"></script>
-    <!--&lt;!&ndash;<script type="text/javascript" src="./js/jquery-1.10.1.js"></script>&ndash;&gt;-->
     <script type="text/javascript" src="./js/jquery.cookie.js"></script>
     <script type="text/javascript" src="./js/modernizr.mq.js"></script>
     <script type="text/javascript" src="./js/jquery.joyride-2.1.js"></script>
