tutorial added from Brunch N Hack

--- a/datable.html
+++ b/datable.html
@@ -61,7 +61,7 @@
           <div>
             <!--<a href="#modal">Modal №1</a>-->
             <a class="button button-primary" href="#modal" id="HelpWithCheckout">
-              Introduce us Please 
+              Candidate Pool Introductions
               <i class="fa fa-hand-spock-o" style="font-size:18px" aria-hidden="true"></i>
               </a>
             <div id="SelectedContainer"></div>
@@ -250,34 +250,32 @@
 
       <!-- 2) Experience Level - Filter -->
       <li data-id="HelpWithFiltering" data-button="Next" data-options="tipLocation:bottom;tipAnimation:fade">
-        <h3>Find candidates by filtering</h3>
-        <p>You can use any of the groups on the left side.
-          Just click on a candidate characteristic to focus on candidates that match your need. </p>
+        <h3>Candidate Filters</h3>
+        <p>Find your Candidates by using these filters.</p>
       </li>
 
       <!-- 3) Introduce button (per candidate) -->
       <li data-id="HelpWithAddIntro" data-button="Next" data-options="tipLocation:top;tipAnimation:fade">
-        <h3>Select the candidates you want to be introduced.</h3>
-        <p>The candidates you selected will be added to the top panel. They are listed by an identifier,
-          you'll get their information on checkout.</p>
+        <h3>Candidate Pool</h3>
+        <p>Add Candidates to your Pool with these buttons.</p>
       </li>
       
       <!-- 4) Introduce us - Checkout -->
       <li data-id="HelpWithCheckout" data-button="Next" data-options="tipLocation:bottom;tipAnimation:fade">
-        <h3>Click here to be introduced</h3>
-        <p>Yada nada yada.</p>
+        <h3>Candidate Introductions</h3>
+        <p>Once you've selected all your Candidates, start the Introduction Process here.</p>
       </li>
 
       <!-- 5) Keshif help -->
       <li data-id="HelpWithKeshif" data-button="Next" data-options="tipLocation:bottom;tipAnimation:fade">
-        <h3>Click here to get more info about this data browser.</h3>
-        <p>Built with www.Keshif.me</p>
+        <h3>Keshif Powerhouse</h3>
+        <p>Dive into the Keshif rabbit-hole here www.Keshif.me</p>
       </li>
 
       <!-- 6) Video tutorial -->
       <li data-id="HelpWithVideoTutorial" data-button="Next" data-options="tipLocation:bottom;tipAnimation:fade">
         <h3>Video Tutorial</h3>
-        <p>Be the master</p>
+        <p>Learn from The Master here.</p>
       </li>
 
     </ol>
